syntax = "proto2";

package cobalt_with_voicecall;

enum PacketType {
  connect = 1;
  encode = 2;
  decode = 3;
  media = 4;
}

message ConnectPacket {
  required string server = 1;
  required int32 port = 2;
  required string sender = 3;
  required string receive = 4;
  required string call_id = 5;
  required string token = 6;
  required string password = 7;
  required string call_key = 8;
}

message EncodePacket {
  required bytes data = 1;
}

message DecodePacket {
  required bytes data = 1;
}

message MediaPacket {
  required bytes data = 1;
  required bool isRtp = 2;
  required uint32 seq = 3;
  required uint32 timestamp = 4;
  // 0 voice 1 video
  optional int32 type = 5;
}

message Packet {
  required PacketType type = 1;
  oneof payload {
    ConnectPacket connect = 2;
    EncodePacket encode = 3;
    DecodePacket decode = 4;
    MediaPacket media = 5;
  }
}
